Resolving issues with ef core implementation, create book API, fixed incorrect wiring of mediatr

--- a/Atlas/appsettings.json
+++ b/Atlas/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AstroDbConnectionString": "Host=localhost;Database=Astro;Username=postgres;Password=Gems@2009"
+  }
 }
