--- a/Astro/Astro.csproj
+++ b/Astro/Astro.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Marten" Version="7.28.0" />
+    <PackageReference Include="Marten" Version="7.29.0" />
     <PackageReference Include="Marten.CommandLine" Version="7.28.0" />
     <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
